<?xml version="1.0"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.nsisc</groupId>
	<artifactId>em</artifactId>
	<packaging>pom</packaging>
	<version>2.0.0-SNAPSHOT</version>

	<modules>
		<module>em-connector</module>
	</modules>

	<build>
		<finalName>${artifactId}</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<nexus.github.url>https://maven.pkg.github.com/vporoxnenko/artifacts</nexus.github.url>
	</properties>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>Internal Releases</name>
			<url>${nexus.github.url}/releases</url>
		</repository>
		<snapshotRepository>
			<id>github</id>
			<name>Internal Releases</name>
			<url>${nexus.github.url}/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>6.0</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>5.4.14.Final</version>
			</dependency>
			<dependency>
				<groupId>com.nsisc.em</groupId>
				<artifactId>em-connector</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
